<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBackgroundImage"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_380sdp"
        android:alpha="0.3"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/iv_background" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtWelcomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_80sdp"
        android:ellipsize="end"
        android:includeFontPadding="false"
        android:maxLength="10"
        android:maxLines="1"
        android:text="@string/txt_welcome"
        android:textColor="@color/white"
        android:textSize="@dimen/_32ssp"
        app:fontFamily="@font/poppins_medium_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtWelcomeDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:ellipsize="end"
        android:gravity="center"
        android:includeFontPadding="false"
        android:maxLines="3"
        android:text="@string/txt_welcome_desc"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        app:fontFamily="@font/poppins_medium_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtWelcomeTitle" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/grpLoginUi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="tilEmail,tilPassword"
        tools:visibility="visible" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_42sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_32sdp"
        app:boxBackgroundColor="@color/input_bg"
        app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
        app:boxCornerRadiusBottomStart="@dimen/_8sdp"
        app:boxCornerRadiusTopEnd="@dimen/_8sdp"
        app:boxCornerRadiusTopStart="@dimen/_8sdp"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="@dimen/_1sdp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWelcomeDesc">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_email"
            android:imeOptions="actionNext"
            android:includeFontPadding="false"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:maxLength="50"
            android:maxLines="1"
            android:text="@string/default_email_for_fast_testing"
            android:textColor="@color/white"
            android:textColorHint="@color/text_color_hint"
            android:textCursorDrawable="@null" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_42sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        app:boxBackgroundColor="@color/input_bg"
        app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
        app:boxCornerRadiusBottomStart="@dimen/_8sdp"
        app:boxCornerRadiusTopEnd="@dimen/_8sdp"
        app:boxCornerRadiusTopStart="@dimen/_8sdp"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="@dimen/_1sdp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_pass"
            android:imeOptions="actionDone"
            android:includeFontPadding="false"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLength="20"
            android:maxLines="1"
            android:text="@string/default_pass_for_fast_testing"
            android:textColor="@color/white"
            android:textColorHint="@color/text_color_hint"
            android:textCursorDrawable="@null" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.milantejani.theonepractical.ui.customView.FButton
        android:id="@+id/doLogin"
        android:layout_width="0dp"
        android:layout_height="@dimen/_46sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:fontFamily="@font/poppins_semibold_600"
        android:includeFontPadding="false"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:shadowColor="@color/btn_color_shadow"
        android:text="@string/txt_login"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        app:buttonColor="@color/btn_color"
        app:cornerRadius="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shadowEnabled="true"
        app:shadowHeight="@dimen/_4sdp" />

</androidx.constraintlayout.widget.ConstraintLayout>