<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtAddUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:ellipsize="end"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:text="@string/txt_user_detail"
        android:textColor="@color/white"
        android:textSize="@dimen/_24ssp"
        app:fontFamily="@font/poppins_semibold_600"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilfname"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_42sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        app:boxBackgroundColor="@color/input_bg"
        app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
        app:boxCornerRadiusBottomStart="@dimen/_8sdp"
        app:boxCornerRadiusTopEnd="@dimen/_8sdp"
        app:boxCornerRadiusTopStart="@dimen/_8sdp"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="@dimen/_1sdp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddUser">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtfname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_fname"
            android:imeOptions="actionNext"
            android:includeFontPadding="false"
            android:lines="1"
            android:maxLength="50"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/text_color_hint"
            android:textCursorDrawable="@null" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tillname"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_42sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        app:boxBackgroundColor="@color/input_bg"
        app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
        app:boxCornerRadiusBottomStart="@dimen/_8sdp"
        app:boxCornerRadiusTopEnd="@dimen/_8sdp"
        app:boxCornerRadiusTopStart="@dimen/_8sdp"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="@dimen/_1sdp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilfname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtlname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_lname"
            android:imeOptions="actionNext"
            android:includeFontPadding="false"
            android:lines="1"
            android:maxLength="20"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/text_color_hint"
            android:textCursorDrawable="@null" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilemail"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_42sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        app:boxBackgroundColor="@color/input_bg"
        app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
        app:boxCornerRadiusBottomStart="@dimen/_8sdp"
        app:boxCornerRadiusTopEnd="@dimen/_8sdp"
        app:boxCornerRadiusTopStart="@dimen/_8sdp"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="@dimen/_1sdp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tillname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtemail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_email"
            android:imeOptions="actionDone"
            android:includeFontPadding="false"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:maxLength="50"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/text_color_hint"
            android:textCursorDrawable="@null" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.milantejani.theonepractical.ui.customView.FButton
        android:id="@+id/btnAddUser"
        android:layout_width="0dp"
        android:layout_height="@dimen/_46sdp"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:fontFamily="@font/poppins_semibold_600"
        android:includeFontPadding="false"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:shadowColor="@color/btn_color_shadow"
        android:text="@string/txt_add_user"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        app:buttonColor="@color/btn_color"
        app:cornerRadius="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@id/tilemail"
        app:shadowEnabled="true"
        app:shadowHeight="@dimen/_4sdp" />

    <com.milantejani.theonepractical.ui.customView.FButton
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="@dimen/_46sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_4sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:fontFamily="@font/poppins_semibold_600"
        android:includeFontPadding="false"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:shadowColor="@color/btn_color_shadow_cancel"
        android:text="@string/txt_cancel"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:buttonColor="@color/btn_color_cancel"
        app:cornerRadius="@dimen/_12sdp"
        app:layout_constraintEnd_toStartOf="@id/guidelineCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilemail"
        app:shadowEnabled="true"
        app:shadowHeight="@dimen/_4sdp" />


</androidx.constraintlayout.widget.ConstraintLayout>